modal js initialised

--- a/index.html
+++ b/index.html
@@ -54,24 +54,7 @@
     </main>
 
     <script type="module" src="/main.js"></script>
-    <script>
-      var modal = document.getElementById("myModal");
-      var btn = document.getElementById("myBtn");
-      var span = document.getElementsByClassName("close")[0];
-
-      btn.onclick = function() {
-        modal.style.display = "block";
-      }
-
-      span.onclick = function() {
-        modal.style.display = "none";
-      }
-      window.onclick = function(event) {
-        if (event.target == modal) {
-          modal.style.display = "none";
-        }
-      }
-    </script>
+    <script src="/modal.js"></script>
 
   </body>
 </html>
