some modification in html

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="stylesheet" href="./assets/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebRTC Demo</title>
+    <title>WebRTC video call</title>
   </head>
   <body>
     <main>
       <header>
           
-        <h2>Your Webcam 📷</h2>
+        <h2>Your Videocall 📷</h2>
       </header>
       <article class="videos">
         <button id="myBtn" >☰</button>
